--- a/MildBrainInjury/MainPage.xaml
+++ b/MildBrainInjury/MainPage.xaml
@@ -74,16 +74,16 @@
             <!--Pivot item three-->
             <phone:PivotItem Header="Symptoms">
                 <!--Double line list no text wrapping-->
-                <phone:LongListSelector Margin="0,0,-12,0">
+                <!--<phone:LongListSelector Margin="0,0,-12,0">
                     <phone:LongListSelector.ItemTemplate>
-                        <DataTemplate>
+                        <DataTemplate> -->
                             <StackPanel Margin="0,0,0,17">
                                 <TextBlock Text="Headaches" TextWrapping="NoWrap" Margin="12,0,0,0" Style="{StaticResource PhoneTextExtraLargeStyle}"/>
                                 <TextBlock Text="Feelings of dizziness" TextWrapping="NoWrap" Margin="12,-6,0,0" Style="{StaticResource PhoneTextSubtleStyle}"/>
                             </StackPanel>
-                        </DataTemplate>
+                        <!-- </DataTemplate>
                     </phone:LongListSelector.ItemTemplate>
-                </phone:LongListSelector>
+                </phone:LongListSelector> -->
             </phone:PivotItem>
         </phone:Pivot>
 
