--- a/MildBrainInjury/MainPage.xaml
+++ b/MildBrainInjury/MainPage.xaml
@@ -37,7 +37,7 @@
          -->
 
         <!--Pivot Control-->
-        <phone:Pivot Title="Mild Brain Injury">
+        <phone:Pivot Title="Mild Brain Injury" Background="#FFEC0020">
             <!--Pivot item one-->
             <phone:PivotItem Header="Mild Brain Injury">
                 <!--Double line list with text wrapping-->
@@ -45,7 +45,7 @@
                     <phone:LongListSelector.ItemTemplate ItemSource="">
                         <DataTemplate>-->
                             <StackPanel Margin="0,0,0,17">
-                    <TextBlock Text="REST" TextWrapping="Wrap" Style="{StaticResource PhoneTextSubtleStyle}"/>
+                                <TextBlock Text="REST" TextWrapping="Wrap" Style="{StaticResource PhoneTextSubtleStyle}"/>
                                 <TextBlock Text="INFORM FRIENDS OR FAMILY" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource PhoneTextSubtleStyle}"/>
                                 <TextBlock Text="SIGNS &amp; SYMPTOMS" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource PhoneTextSubtleStyle}"/>
                                 <TextBlock Text="KNOW WHAT TO DO NEXT" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource PhoneTextSubtleStyle}"/>
