--- a/MildBrainInjury/MainPage.xaml
+++ b/MildBrainInjury/MainPage.xaml
@@ -103,10 +103,6 @@
 
             <!--Pivot item three-->
             <phone:PivotItem Header="Symptoms">
-                <!--Double line list no text wrapping-->
-                <!--<phone:LongListSelector Margin="0,0,-12,0">
-                    <phone:LongListSelector.ItemTemplate>
-                        <DataTemplate> -->
                 <StackPanel Margin="0,0,0,17">
                     <TextBlock Text="OCCASIONALLY SOME SYMPTOMS MAY PERSIST FOR LONGER. IF IN ANY DOUBT CONTACT YOUR GP AS SOON AS POSSIBLE. THERE IS ALSO A SMALL RISK OF DEVELOPING COMPLICATIONS SO IF YOU EXPERIENCE ANY OF THE FOLLOWING SYMPTOMS GO TO YOUR LOCAL A&amp;E DEPARTMENT IMMEDIATELY. " TextWrapping="Wrap" Margin="12,0,0,0" />
                     <TextBlock Text="Loss of consciousness and / or fits" TextWrapping="NoWrap" Margin="12,0,0,0" />
@@ -117,9 +113,6 @@
                     <TextBlock Text="Clear fluid from ears and nose" TextWrapping="NoWrap" Margin="12,0,0,0" />
                     <TextBlock Text="Any vomiting" TextWrapping="NoWrap" Margin="12,0,0,0" />
                 </StackPanel>
-                <!-- </DataTemplate>
-                    </phone:LongListSelector.ItemTemplate>
-                </phone:LongListSelector> -->
             </phone:PivotItem>
 
         </phone:Pivot>
@@ -132,5 +125,11 @@
             Before shipping remove this XAML and the image itself.-->
         <!--<Image Source="/Assets/AlignmentGrid.png" VerticalAlignment="Top" Height="800" Width="480" Margin="0,-32,0,0" Grid.Row="0" IsHitTestVisible="False" />-->
     </Grid>
+
+    <phone:PhoneApplicationPage.ApplicationBar>
+        <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True">
+            <shell:ApplicationBarIconButton IconUri="/Assets/feature.search.png" Text="Services" Click="ShowServices" />
+        </shell:ApplicationBar>
+    </phone:PhoneApplicationPage.ApplicationBar>
 
 </phone:PhoneApplicationPage>
