--- a/MildBrainInjury/ServicesPage.xaml
+++ b/MildBrainInjury/ServicesPage.xaml
@@ -14,23 +14,66 @@
     SupportedOrientations="Portrait"  Orientation="Portrait"
     shell:SystemTray.IsVisible="True">
 
-    <!--LayoutRoot is the root grid where all page content is placed-->
-    <Grid x:Name="LayoutRoot" Background="Transparent">
-        <!--Pivot Control-->
-        <phone:Pivot Title="Mild Brain Injury" Background="#FFEC0020">
-            <!--Pivot item one-->
-            <phone:PivotItem Header="Services">
-                <Grid/>
-            </phone:PivotItem>
+  <phone:PhoneApplicationPage.Resources>
+    <DataTemplate x:Key="AddrBookItemTemplate">
+      <StackPanel VerticalAlignment="Top">
+        <TextBlock FontWeight="Bold" Text="{Binding Name}" />
+        <TextBlock Text="{Binding Address}" />
+        <TextBlock Text="{Binding Phone}" />
+      </StackPanel>
+    </DataTemplate>
+    <DataTemplate x:Key="AddrBookGroupHeaderTemplate">
+      <Border Background="Transparent" Padding="5">
+        <Border Background="{StaticResource PhoneAccentBrush}" BorderBrush="{StaticResource PhoneAccentBrush}" BorderThickness="2" Width="62" 
+         Height="62" Margin="0,0,18,0" HorizontalAlignment="Left">
+          <TextBlock Text="{Binding Key}" Foreground="{StaticResource PhoneForegroundBrush}" FontSize="48" Padding="6" 
+            FontFamily="{StaticResource PhoneFontFamilySemiLight}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        </Border>
+      </Border>
+    </DataTemplate>
+    <phone:JumpListItemBackgroundConverter x:Key="BackgroundConverter"/>
+    <phone:JumpListItemForegroundConverter x:Key="ForegroundConverter"/>
+    <Style x:Key="AddrBookJumpListStyle" TargetType="phone:LongListSelector">
+      <Setter Property="GridCellSize"  Value="113,113"/>
+      <Setter Property="ItemTemplate">
+        <Setter.Value>
+          <DataTemplate>
+            <Border Background="{Binding Converter={StaticResource BackgroundConverter}}" Width="113" Height="113" Margin="6" >
+              <TextBlock Text="{Binding Key}" FontFamily="{StaticResource PhoneFontFamilySemiBold}" FontSize="48" Padding="6" 
+               Foreground="{Binding Converter={StaticResource ForegroundConverter}}" VerticalAlignment="Center"/>
+            </Border>
+          </DataTemplate>
+        </Setter.Value>
+      </Setter>
+    </Style>
+  </phone:PhoneApplicationPage.Resources>
+  
+  <!--LayoutRoot is the root grid where all page content is placed-->
+  <Grid x:Name="LayoutRoot" Background="Transparent">
+    <!--Pivot Control-->
+    <phone:Pivot Title="Mild Brain Injury" Background="#FFEC0020" Loaded="Pivot_Loaded">
+      <!--Pivot item one-->
+      <phone:PivotItem Header="Services">
+        <phone:LongListSelector x:Name="ServicesList" 
+                                JumpListStyle="{StaticResource AddrBookJumpListStyle}"
+                                GroupHeaderTemplate="{StaticResource AddrBookGroupHeaderTemplate}"
+                                ItemTemplate="{StaticResource AddrBookItemTemplate}"
+                                LayoutMode="List"
+                                IsGroupingEnabled="true"
+                                HideEmptyGroups ="true"
+                                />
 
-            <!--Pivot item two-->
-            <phone:PivotItem Header="Map">
-                <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,12,12,12">
-                    <maps:Map x:Name="ServicesMap"  />
+      </phone:PivotItem>
 
-                </Grid>
-            </phone:PivotItem>
-        </phone:Pivot>
-    </Grid>
-    
+      <!--Pivot item two-->
+      <phone:PivotItem Header="Map">
+        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,12,12,12">
+          <maps:Map x:Name="ServicesMap"  />
+
+        </Grid>
+      </phone:PivotItem>
+    </phone:Pivot>
+  </Grid>
+  
+  
 </phone:PhoneApplicationPage>
