Minimised App Bar
Made App Bar minimised by default

--- a/MildBrainInjury/MainPage.xaml
+++ b/MildBrainInjury/MainPage.xaml
@@ -290,7 +290,7 @@
     </Grid>
 
     <phone:PhoneApplicationPage.ApplicationBar>
-        <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True">
+        <shell:ApplicationBar Mode="Minimized" IsVisible="True" IsMenuEnabled="True">
             <shell:ApplicationBarIconButton IconUri="/Assets/feature.search.png" Text="Services" Click="ShowServices" />
         </shell:ApplicationBar>
     </phone:PhoneApplicationPage.ApplicationBar>
