Service websites now link to website

--- a/MildBrainInjury/ServicesPage.xaml
+++ b/MildBrainInjury/ServicesPage.xaml
@@ -20,8 +20,8 @@
         <DataTemplate x:Key="AddrBookItemTemplate">
             <StackPanel VerticalAlignment="Top">
                 <TextBlock FontWeight="Bold" Text="{Binding Name}" />
-                <TextBlock Text="{Binding Address}" />
-                <TextBlock Text="{Binding Phone}" />
+                <HyperlinkButton Content="{Binding Address}" NavigateUri="{Binding Address}" TargetName="_blank" HorizontalAlignment="Left" />
+                <TextBlock Text="{Binding Phone}" Margin="12,0,0,0" HorizontalAlignment="Left" />
             </StackPanel>
         </DataTemplate>
         <DataTemplate x:Key="AddrBookGroupHeaderTemplate">
