--- a/MildBrainInjury/ServicesPage.xaml
+++ b/MildBrainInjury/ServicesPage.xaml
@@ -16,62 +16,48 @@
     xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
     shell:SystemTray.IsVisible="True">
 
-<<<<<<< HEAD
     <phone:PhoneApplicationPage.Resources>
         <DataTemplate x:Key="AddrBookItemTemplate">
             <StackPanel VerticalAlignment="Top">
                 <TextBlock FontWeight="Bold" Text="{Binding Name}" />
-                <HyperlinkButton Content="{Binding Address}" NavigateUri="{Binding Address}" TargetName="_blank" HorizontalAlignment="Left" />
-                <TextBlock Text="{Binding Phone}" Margin="12,0,0,0" HorizontalAlignment="Left" />
+                <HyperlinkButton Content="{Binding Address}" NavigateUri="{Binding Address}" HorizontalAlignment="Left" TargetName="_blank"/>
+                <TextBlock Text="{Binding Phone}" HorizontalAlignment="Left" Margin="12,0,0,0" />
             </StackPanel>
         </DataTemplate>
         <DataTemplate x:Key="AddrBookGroupHeaderTemplate">
             <Border Background="Transparent" Padding="5">
-                <Border Background="{StaticResource PhoneAccentBrush}" BorderBrush="{StaticResource PhoneAccentBrush}" BorderThickness="2" Width="62" 
-=======
-  <phone:PhoneApplicationPage.Resources>
-    <DataTemplate x:Key="AddrBookItemTemplate">
-      <StackPanel VerticalAlignment="Top">
-        <TextBlock FontWeight="Bold" Text="{Binding Name}" />
-        <TextBlock Text="{Binding Address}" />
-        <TextBlock Text="{Binding Phone}" />
-      </StackPanel>
-    </DataTemplate>
-    <DataTemplate x:Key="AddrBookGroupHeaderTemplate">
-      <Border Background="Transparent" Padding="5">
-        <Border Background="{StaticResource PhoneAccentBrush}" BorderBrush="WhiteSmoke" BorderThickness="2" Width="202" 
->>>>>>> 6f2887ef62c83af2161cdce364883eb79ac40315
+                <Border Background="{StaticResource PhoneAccentBrush}" BorderBrush="WhiteSmoke" BorderThickness="2" Width="202" 
          Height="62" Margin="0,0,18,0" HorizontalAlignment="Left">
-            <Grid Background="White" Margin="0,0,0,0" HorizontalAlignment="Left" Width="202">
-              <TextBlock Text="{Binding CategoryFirst}" 
+                    <Grid Background="White" Margin="0,0,0,0" HorizontalAlignment="Left" Width="202">
+                        <TextBlock Text="{Binding CategoryFirst}" 
                        FontSize="48" 
                        HorizontalAlignment="Left" 
                        Foreground="#FFE30613" 
                        FontWeight="Bold" 
                        Margin="5,2,0,-1" />
-              <TextBlock Text="{Binding CategoryRest}" 
+                        <TextBlock Text="{Binding CategoryRest}" 
                          Foreground="#FF8E1816" 
                          TextWrapping="Wrap" Margin="40,0,8,0" 
                          Name="txt1" 
                          VerticalAlignment="Bottom" 
                          FontWeight="Bold" />
-            </Grid>
-        </Border>
-      </Border>
-    </DataTemplate>
-    <phone:JumpListItemBackgroundConverter x:Key="BackgroundConverter"/>
-    <phone:JumpListItemForegroundConverter x:Key="ForegroundConverter"/>
-    <Style x:Key="AddrBookJumpListStyle" TargetType="phone:LongListSelector">
-      <Setter Property="GridCellSize"  Value="113,113"/>
-      <Setter Property="ItemTemplate">
-        <Setter.Value>
-          <DataTemplate>
-            <Border Background="{Binding Converter={StaticResource BackgroundConverter}}" Width="113" Height="113" Margin="6" >
-              <TextBlock Text="{Binding Key}" FontFamily="{StaticResource PhoneFontFamilySemiBold}" FontSize="48" Padding="6" 
-               Foreground="{Binding Converter={StaticResource ForegroundConverter}}" VerticalAlignment="Center"/>
+                    </Grid>
+                </Border>
             </Border>
         </DataTemplate>
-       
+        <phone:JumpListItemBackgroundConverter x:Key="BackgroundConverter"/>
+        <phone:JumpListItemForegroundConverter x:Key="ForegroundConverter"/>
+        <Style x:Key="AddrBookJumpListStyle" TargetType="phone:LongListSelector">
+            <Setter Property="GridCellSize"  Value="113,113"/>
+            <Setter Property="ItemTemplate">
+                <Setter.Value>
+                    <DataTemplate>
+                        <Border Background="{Binding Converter={StaticResource BackgroundConverter}}" Width="113" Height="113" Margin="6" >
+                            <TextBlock Text="{Binding Key}" FontFamily="{StaticResource PhoneFontFamilySemiBold}" FontSize="48" Padding="6" 
+               Foreground="{Binding Converter={StaticResource ForegroundConverter}}" VerticalAlignment="Center"/>
+                        </Border>
+                    </DataTemplate>
+
                 </Setter.Value>
             </Setter>
         </Style>
@@ -92,16 +78,16 @@
                                 HideEmptyGroups ="true"
                                 />
 
-      </phone:PivotItem>
+            </phone:PivotItem>
 
-      <!--Pivot item two-->
-      <phone:PivotItem Header="Map">
-        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,12,12,12">
+            <!--Pivot item two-->
+            <phone:PivotItem Header="Map">
+                <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,12,12,12">
                     <maps:Map x:Name="ServicesMap" Loaded="ServiceMap_Loaded" />
-        </Grid>
-      </phone:PivotItem>
-    </phone:Pivot>
-  </Grid>
-  
-  
+                </Grid>
+            </phone:PivotItem>
+        </phone:Pivot>
+    </Grid>
+
+
 </phone:PhoneApplicationPage>
