--- a/MildBrainInjury/App.xaml
+++ b/MildBrainInjury/App.xaml
@@ -2,12 +2,44 @@
     x:Class="MildBrainInjury.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
-    xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone">
+    xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
+    xmlns:Toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit">
 
     <!--Application Resources-->
     <Application.Resources>
         <local:LocalizedStrings xmlns:local="clr-namespace:MildBrainInjury" x:Key="LocalizedStrings"/>
+        <Style x:Key="MenuItemStyle" TargetType="Toolkit:MenuItem">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Toolkit:MenuItem">
+                        <StackPanel>
+                            <TextBlock Margin="5,0,0,0" Foreground="White" Text="{Binding Name}" 
+                                       TextWrapping="Wrap" 
+                                       FontSize="26"
+                                       FontWeight="Bold"/>
+                            <TextBlock  Foreground="White"  Text="{Binding Address}" 
+                                       TextTrimming="WordEllipsis" 
+                                       Margin="5,0" 
+                                       FontSize="22"/>
+
+                        </StackPanel>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        
+        <Style x:Key="MenuStyle" TargetType="Toolkit:ContextMenu">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate>
+                        <Border CornerRadius="8" Margin="12,0,12,0" 
+                               BorderBrush="White" BorderThickness="2" Background="#8E1816">
+                            <ItemsPresenter />
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </Application.Resources>
 
     <Application.ApplicationLifetimeObjects>
